Fixed layout issue

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -72,6 +72,7 @@
 }
 
 .block-holder .box {
+  width: auto;
   max-width: 200px;
 }
 
